--- a/docs/assets/css/ccc.css
+++ b/docs/assets/css/ccc.css
@@ -3337,6 +3337,8 @@ section.container.bciBannerImage.bciHandImage { padding-top: 0; }
 @media screen and (max-width: 600px) { header.jumbotron.text-left.tileHeader { background: url(/assets/img/ccc_mobile_banner.png); background-size: cover; background-position: 50% 50%; position: relative; }
   .curatedMap { display: none; }
   button.learnMoreButton { margin: 0; left: 0; display: inline-block; font-size: 2.5em; width: 50%; }
+  .row { margin: 0; max-width: 100%; }
+  .container-fluid.footer { padding-left: 0; padding-right: 0; }
   button.learnMoreButton.callToAction { left: 50%; }
   #map-1 { order: 2; }
   #map-2 { order: 2; }
